--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Stuff</title>
+  <title>BlueCoatPainting</title>
 </head>
 <body>
-  <h1>Hello World</h1>
-  <h1>Testowanie</h1>
+  <h1>Hello Macek Robert World</h1>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/EMXCIWW0x2o" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
