--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>BlueCoatPainting</title>
+  <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
   <h1>Hello Macek Robert World</h1>
