--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
      <div class="row center-block">
        <div class="col-xs-12 text-center">
          <div class="content">
-           <h1>Ewa Kowalski</h1>
-            <h2>FRONT END DEVELOPER</h2>
+           <h1>Blue Coat Painting</h1>
+            <h2>PAINTING AND DECORATING</h2>
              <ul>
                <li><a href="https://github.com/Robert1211" target="_blank"><i class="fa fa-github-square fa-3x fa-fw"></i></a></li>
               <li><a href="https://twitter.com/RobertM07288550" target="_blank"><i class="fa fa-twitter-square fa-3x fa-fw"></a></i></li>
