--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">Coat</a></li>
+            <li><a href="#about">RobertM</a></li>
             <li><a href="#portfolio">Prodaction</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
