--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#home">Home</a></li>
+            <li><a href="#home">Robert</a></li>
             <li><a href="#about">Bio</a></li>
             <li><a href="#portfolio">Prodaction</a></li>
             <li><a href="#contact">Contact</a></li>
