--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,11 +11,13 @@
   <link rel="stylesheet" href="css/master.css">
 
 </head>
+
 <body>
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+          data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -24,37 +27,40 @@
           BLUE COAT PAINTING
         </a>
       </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#home">RobertMaculewicz</a></li>
-            <li><a href="#about">Bio</a></li>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">RobertM</a></li>
-            <li><a href="#portfolio">Prodaction</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#home">RobertMaculewicz</a></li>
+          <li><a href="#about">Bio</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">RobertM</a></li>
+          <li><a href="#portfolio">Prodaction</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
   <a id="home"></a>
   <section class="home-intro">
-   <div class="container vcenter">
-     <div class="row center-block">
-       <div class="col-xs-12 text-center">
-         <div class="content">
-           <h1>Blue Coat Painting</h1>
+    <div class="container vcenter">
+      <div class="row center-block">
+        <div class="col-xs-12 text-center">
+          <div class="content">
+            <h1>Blue Coat Painting</h1>
             <h2>PAINTING AND DECORATING</h2>
-             <ul>
-               <li><a href="https://github.com/Robert1211" target="_blank"><i class="fa fa-github-square fa-3x fa-fw"></i></a></li>
-              <li><a href="https://twitter.com/RobertM07288550" target="_blank"><i class="fa fa-twitter-square fa-3x fa-fw"></a></i></li>
-              <li><a href="http://linkedin.com/in/robert-maculewicz" target="_blank"><i class="fa fa-linkedin-square fa-3x fa-fw"></a></i></li>
-             </ul>
-         </div>
-       </div>
-     </div>
-   </div>
+            <ul>
+              <li><a href="https://github.com/Robert1211" target="_blank"><i
+                    class="fa fa-github-square fa-3x fa-fw"></i></a></li>
+              <li><a href="https://twitter.com/RobertM07288550" target="_blank"><i
+                    class="fa fa-twitter-square fa-3x fa-fw"></a></i></li>
+              <li><a href="http://linkedin.com/in/robert-maculewicz" target="_blank"><i
+                    class="fa fa-linkedin-square fa-3x fa-fw"></a></i></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
-  
+
 
   <a id="about"></a>
   <section class="about">
@@ -62,8 +68,12 @@
       <div class="row">
         <div class="col-sm-6">
           <div class="content">
-            <blockquote>Life isn't about finding yourself. Life is about creating yourself.<small>George Bernard Shaw</small></blockquote>
-            <p>I am a Junior Web Developer - dedicated to having a nice balance of problem solving, logical thinking and creativity in my work.</p><p>I am a resilient professional and I promise to bring my positive attitude to my new career as a Developer.</p>
+            <blockquote>Life isn't about finding yourself. Life is about creating yourself.<small>George Bernard
+                Shaw</small></blockquote>
+            <p>I am a Junior Web Developer - dedicated to having a nice balance of problem solving, logical thinking and
+              creativity in my work.</p>
+            <p>I am a resilient professional and I promise to bring my positive attitude to my new career as a
+              Developer.</p>
           </div>
         </div>
       </div>
@@ -81,7 +91,7 @@
         <div class="row">
           <div class="col-sm-3">
             <a href="https://robert1211.github.io/project0/" target="_blank">
-              <div class="project"   style="background-image:url(https://jpk-image-hosting.s3.amazonaws.com/makechow)">
+              <div class="project" style="background-image:url(https://jpk-image-hosting.s3.amazonaws.com/makechow)">
                 <div class="overlay">
                   <h4>Tic Tac Toe</h4>
                 </div>
@@ -89,21 +99,21 @@
             </a>
           </div>
           <div class="col-sm-3">
-           <a href="https://infinite-scrubland-70213.herokuapp.com" target="_blank">
-            <div class="project" style="background-image:url(https://jpk-image-hosting.s3.amazonaws.com/makechow)">
-              <div class="overlay">
-                <h4>TimeSheet</h4>
+            <a href="https://infinite-scrubland-70213.herokuapp.com" target="_blank">
+              <div class="project" style="background-image:url(https://jpk-image-hosting.s3.amazonaws.com/makechow)">
+                <div class="overlay">
+                  <h4>TimeSheet</h4>
+                </div>
               </div>
-            </div>
-           </a>
+            </a>
           </div>
           <div class="col-sm-3">
             <a href="https://robert1211.github.io/happy_find_client/#/" target="_blank">
-             <div class="project" style="background-image:url(https://jpk-image-hosting.s3.amazonaws.com/makechow)">
-               <div class="overlay">
-                 <h4>Happy find</h4>
-               </div>
-             </div>
+              <div class="project" style="background-image:url(https://jpk-image-hosting.s3.amazonaws.com/makechow)">
+                <div class="overlay">
+                  <h4>Happy find</h4>
+                </div>
+              </div>
             </a>
           </div>
           <div class="col-sm-3">
@@ -139,4 +149,5 @@
   <script src="js/query.smooth-scroll.js"></script>
   <script src="js/main.js"></script>
 </body>
+
 </html>
