--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="col-xs-12 text-center">
           <div class="content">
             <h1>BlueCoatPainting</h1>
-            <h2>PAINTING AND DECORATING</h2>
+            <h2>PAINTING-AND-DECORATING</h2>
             <ul>
               <li><a href="https://github.com/Robert1211" target="_blank"><i
                     class="fa fa-github-square fa-3x fa-fw"></i></a></li>
