--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
         <div class="container">
             <a href="#" class="navbar-brand">Blue Coat Painting</a>
 
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navmenu">
+                <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a href="#learn" class="nav-link">What you learn</a>
                     </li>
