--- a/index.html
+++ b/index.html
@@ -6,9 +6,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
+    <script type="module" src="js/main.js"></script>
 </head>
 
 <body>
+
+    <!--Scroll Spy Navigation-->
+
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
+    <!-- <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3"> -->
+    <nav id="navbar-example2" class="navbar sticky-top navbar-expand-sm bg-body-tertiary">
+        <div class="container">
+            <a class="navbar-brand" href="#">Navbar</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0"> -->
+                <ul class="navbar-nav me-auto">
+
+                    <!-- orginal -->
+                    <!-- <ul class="nav nav-pills"> -->
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#hero">Hero</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#footer">Footer</a>
+                    </li>
+
+                </ul>
+                </ul>
+
+            </div>
+        </div>
+
+    </nav>
+
+
+    <!--Scroll Spy Main Content-->
+    <main data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%"
+        data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
+
+        <!--Hero Section Start-->
+        <section id="#hero" class="section">
+            <h1>Hero Section</h1>
+        </section>
+        <!--Hero Section End-->
+
+        <!--About Section Start-->
+        <section id="about" class="section">
+            <h1>About Section</h1>
+        </section>
+        <!--About Section End-->
+
+        <!--Portfolio Section Start-->
+        <section id="portfolio" class="section">
+            <h1>Portfolio Section</h1>
+
+        </section>
+        <!--Portfolio Section End-->
+
+        <!--Contact Section Start-->
+        <section id="contact" class="section">
+            <h1>Contact Section</h1>
+        </section>
+        <!--Contact Section End-->
+
+        <!--Footer Section Start-->
+        <section id="footer" class="section">
+            <h1>Footer Section</h1>
+        </section>
+        <!--Footer Section End-->
+
+    </main>
 
 
 
