--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
+    <!-- <script type="module" src="js/main.js"></script> -->
+
 </head>
 
 <body>
@@ -17,7 +19,7 @@
     <!-- <nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3"> -->
     <nav id="navbar-example2" class="navbar sticky-top navbar-expand-sm bg-body-tertiary">
         <div class="container">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Blue Coat Painting</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,11 +30,11 @@
                 <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0"> -->
                 <ul class="navbar-nav me-auto">
 
-                    <!-- orginal -->
+                    <!-- original -->
                     <!-- <ul class="nav nav-pills"> -->
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#hero">Hero</a>
+                        <a class="nav-link" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#about">About</a>
@@ -61,7 +63,7 @@
         data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
 
         <!--Hero Section Start-->
-        <section id="#hero" class="section">
+        <section id="home" class="section">
             <h1>Hero Section</h1>
         </section>
         <!--Hero Section End-->
@@ -99,6 +101,11 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
     <script src="/js/main.js"></script>
+
+
+
+
+
 
 </body>
 
