add_metaTag_mix_content

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
     <script type="module" src="./js/main.js"></script>
@@ -37,10 +38,10 @@
                         <a class="nav-link" href="#home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">Portfolio</a>
+                        <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
@@ -69,14 +70,14 @@
         <!--Hero Section End-->
 
         <!--About Section Start-->
-        <section id="about" class="section">
-            <h1>About Section</h1>
+        <section id="services" class="section">
+            <h1>Services Section</h1>
         </section>
         <!--About Section End-->
 
         <!--Portfolio Section Start-->
-        <section id="portfolio" class="section">
-            <h1>Portfolio Section</h1>
+        <section id="projects" class="section">
+            <h1>Projects Section</h1>
 
         </section>
         <!--Portfolio Section End-->
