--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <!--Hero Section Start-->
         <section id="home" class="section">
-            <h1>Hero Section</h1>
+            <h1>Hero</h1>
         </section>
         <!--Hero Section End-->
 
