--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Document</title>
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
     <script type="module" src="./js/main.js"></script>
     <!-- <script type="module" src="js/main.js"></script> -->
 
