--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=9" />
+    <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=9" /> -->
 
     <title>Document</title>
 
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="CSS/main.css">
     <script type="module" src="./js/main.js"></script>
     <!-- <script type="module" src="js/main.js"></script> -->
 
