--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Document</title>
 
-    <link rel="stylesheet" href=" ./css/main.css">
+    <link rel="stylesheet" type="text/css" href=" /css/main.css">
     <script type="module" src="./js/main.js"></script>
     <!-- <script type="module" src="js/main.js"></script> -->
 
